k8s/consume-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consume-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consume-service
  template:
    metadata:
      labels:
        app: consume-service
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '5001'
    spec:
      containers:
      - name: consume-service
        image: consume-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: consume-service
spec:
  selector:
    app: consume-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
