k8s/consume-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consume-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /consume
    route:
    - destination:
        host: consume-service.default.svc.cluster.local
        port:
          number: 80
