k8s/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 80
